apps/simple-nginx/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
  namespace: my-app
spec:
  ports:
    - port: 80
  selector:
    app: my-app-deployment
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-deployment
  namespace: my-app
spec:
  selector:
    matchLabels:
      app: my-app-deployment
  replicas: 1
  template:
    metadata:
      labels:
        app: my-app-deployment
    spec:
      containers:
        - name: my-app-deployment
          image: nginx:1.14.2
          ports:
            - containerPort: 80
          volumeMounts:
            - name: htmlcontent
              mountPath: "/usr/share/nginx/html/"
              readOnly: true
      volumes:
        - name: htmlcontent
          configMap:
            name: index.html
            items:
              - key: index.html
                path: index.html
      tolerations:
        - key: "node.kubernetes.io/unreachable"
          operator: "Exists"
          effect: "NoExecute"
          tolerationSeconds: 0
        - key: "node.kubernetes.io/not-ready"
          operator: "Exists"
          effect: "NoExecute"
          tolerationSeconds: 0
      terminationGracePeriodSeconds: 0
